styles.css
/* Variables for colors */
:root {
  /* Grayscale Colors */

  --clr-primary: #000000;
  --clr-secondary: #a9a9a9;
  --clr-accent: var(--clr-secondary);
  --clr-light: #d3d3d3;
  --clr-white: #ffffff;

  /* Primary Colors */
  --primary-bg: #4a7295;
  --primary-bg-light: rgba(74, 114, 149, 35%);
  --primary-text: #fff;

  /* Secondary Colors */
  --secondary-bg: #fff;
  --secondary-text: #000;
  --tertiay-text: #1b1a1ad8;
  --sec-text-eg: #000;

  /* Accent colors */
  --clr-card: rgba(135, 155, 170, 25%);
  --clr-button: #f87c7c;
  --clr-button-hover: #f8bcbc;
  --text-hover-100: #f87c7c;
  --text-hover-200: #4a7295;

  /*font variables*/
  /* Font family for Heading and body */
  --heading-font: "Merriweather", serif;
  --subheading-font: "Merriweather", serif;

  --body-title: "Roboto", sans-serif;
  --body-context: "Roboto", sans-serif;

  /* Font size */
  --fs-heading: 2.5rem;
  --fs-subheading: 2rem;
  --fs-body-title: 1.5rem;
  --fs-body-context: 1rem;

  /* Font weight */
  --fw-heading: 700;
  --fw-subheading: 550;
  --fw--body-title: 180;
  --fw-body-context: normal;

  /* Line height */
  --ht-head: 2rem;
  --ht-context: 1.1rem;

  /* letter spacing */
  --letter-space: normal;
}

/* CSS reset */

/* Border box fix */
* {
  box-sizing: border-box;
}

/* Reset margins */
body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
figure,
picture {
  margin: 0;
  line-height: 1.5rem;
}

/* Remove padding from lists */
ul,
ol {
  padding: 0;
}
/* Utilities Classes for the swatches */
/* Primary colors*/
.u-primary-bg {
  background-color: var(--primary-bg);
}
.u-bg-primary-light {
  background-color: var(--primary-bg-light);
}
.u-primary-text {
  color: var(--primary-text);
}

/* Secondary Colors */
.u-secondary-bg {
  background-color: var(--secondary-bg);
}

.u-secondary-text {
  color: var(--secondary-text);
}

.u-teritiary-text{
  color: var(--tertiay-text);
}

.u-sec__text-eg {
  background-color: var(--sec-text-eg);
}

.u-teritiary-text-eg{
  background-color: var(--tertiay-text);
}
/* Accent Colors */
.u-card {
  background-color: var(--clr-card);
}

.u-button {
  background-color: var(--clr-button);
  color: var(--primary-text);
}

.u-button-hover {
  background-color: var(--clr-button-hover);
  color: var(--primary-text);
}

/* Text Hover Colors */
.u-text-hover-100 {
  color: var(--text-hover-100);
}

.u-text-hover-200 {
  color: var(--text-hover-200);
}

/* Utilities Classes for Typography */
/* Font family */
.u-head__ff {
  font-family: var(--heading-font);
}

.u-subhead__ff {
  font-family: var(--subheading-font);
}

.u-subhead__100 {
  font-family: var(--body-title);
}

.u-context__font {
  font-family: var(--body-context);
}

/* Font Size */
.u-head__size {
  font-size: var(--fs-heading);
}

.u-subhead__size {
  font-size: var(--fs-subheading);
}

.u-title__size {
  font-size: var(--fs-body-title);
}

.u-context__size {
  font-size: var(--fs-body-context);
}

/* Font Weight */
.u-head__weight {
  font-weight: var(--fw-heading);
}

.u-subhead__weight {
  font-weight: var(--fw-subheading);
}

.u-titile__weight {
  font-size: var(--fw--body-title);
}

.u-context__weight {
  font-size: var(--fw-body-context);
}

/* Line height */
.u-head__height {
  line-height: var(--ht-head);
}

.u-context__height {
  line-height: var(--ht-context);
}

/* Base spacing classes */
/* Utility Classes for Margins */
/* Margin for all four sides */
.l-m-100 {
  margin: 1rem;
}

.l-m-200 {
  margin: 1.5rem;
}

.l-m-300 {
  margin: 2rem;
}

/* margin for right, left, top and bottom separately */
/* Margin left */
.l-ml-100 {
  margin-left: 1rem;
}

.l-ml-200 {
  margin-left: 1.5rem;
}

.l-ml-300 {
  margin-left: 2rem;
}

/* Margin Right */
.l-mr-100 {
  margin-right: 1rem;
}

.l-mr-200 {
  margin-right: 1.5rem;
}

.l-mr-300 {
  margin-right: 2rem;
}

/* Margin Top */
.l-mt-100 {
  margin-top: 1rem;
}

.l-mt-200 {
  margin-top: 1.5rem;
}

.l-mt-300 {
  margin-top: 2rem;
}

.l-mt-400 {
  margin-top: 3.5rem;
}
.l-mt-500 {
  margin-top: 5.5rem;
}

/* Margin Bottom */
.l-mb-100 {
  margin-bottom: 1rem;
}

.l-mb-200 {
  margin-bottom: 1.5rem;
}

.l-mb-300 {
  margin-bottom: 2rem;
}

/* Margin X and Y axis */
/* Margin X-axis */
.l-mx-100 {
  margin-left: 1rem;
  margin-right: 1rem;
}

.l-mx-200 {
  margin-left: 2rem;
  margin-right: 2rem;
}

/* Margin Y-axis */
.l-my-100 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.l-my-200 {
  margin-top: 2rem;
  margin-bottom: 2rem;
}

/* Utility Classes for Padding */
/* Padding for all four sides */
.l-p-100 {
  padding: 1rem;
}

.l-p-200 {
  padding: 1.5rem;
}

.l-p-300 {
  padding: 2rem;
}
/* Padding for left, right, top and bottop separately */
/* Padding left */
.l-pl-100 {
  padding-left: 1rem;
}

.l-pl-200 {
  padding-left: 1.5rem;
}

.l-pl-300 {
  padding-left: 2rem;
}

/* Padding Right */
.l-pr-100 {
  padding-right: 1rem;
}

.l-pr-200 {
  padding-right: 1.5rem;
}

.l-pr-300 {
  padding-right: 2rem;
}

/* Padding Top */
.l-pt-100 {
  padding-top: 1rem;
}

.l-pt-200 {
  padding-top: 1.5rem;
}

.l-pt-300 {
  padding-top: 2rem;
}

/* Padding Bottom */
.l-pb-100 {
  padding-bottom: 1rem;
}

.l-pb-200 {
  padding-bottom: 1.5rem;
}

.l-pb-300 {
  padding-bottom: 2rem;
}
/* Padding X and Y axis */
/* Padding X-axis */
.l-px-100 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.l-px-200 {
  padding-left: 2rem;
  padding-right: 2rem;
}

/* Padding Y-axis */
.l-py-100 {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.l-py-200 {
  padding-top: 2rem;
  padding-bottom: 2rem;
}

/* Base layout classes */
/* Utility Classes for Flex layout */
/* Flexbox Layout */
.l-flex {
  display: flex;
}

/* Justify Content */
.l-justify-start {
  justify-content: flex-start;
}

.l-justify-end {
  justify-content: flex-end;
}

.l-justify-center {
  justify-content: center;
}

.l-justify-space-between {
  justify-content: space-between;
}

.l-justify-space-around {
  justify-content: space-around;
}

/* Align Items */
.l-align-start {
  align-items: flex-start;
}
/* ... */

